# QtSemanticNotes

./: CMakeLists.txt
